--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,56 @@
 .vercel
+
+# Node.js - EXCLUDE LARGE FILES
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+.pnpm-debug.log*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env
+
+# Logs
+*.log
+logs/
+
+# ML/AI artifacts
+artifacts/
+models/
+checkpoints/
+data/
+
+# Large binary files
+*.bin
+*.exe
+*.dll
+*.node
