--- a/toyota_interview/Dockerfile
+++ b/toyota_interview/Dockerfile
@@ -1,19 +1,17 @@
 # Multi-stage Docker build for MNIST MLOps Pipeline
 # Stage 1: Base image with dependencies - Ubuntu 22.04
-FROM ubuntu:22.04 as base
+FROM ubuntu:22.04 AS base
 
-# Install Python 3.9 and required packages
+# Install Python 3.10 and required packages (default for Ubuntu 22.04)
 RUN apt-get update && apt-get install -y \
-    python3.9 \
-    python3.9-pip \
-    python3.9-venv \
-    python3.9-dev \
+    python3 \
+    python3-pip \
+    python3-venv \
+    python3-dev \
     git \
     curl \
     build-essential \
-    && ln -sf /usr/bin/python3.9 /usr/bin/python3 \
-    && ln -sf /usr/bin/python3.9 /usr/bin/python \
-    && ln -sf /usr/bin/pip3 /usr/bin/pip \
+    && ln -sf /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/*
 
 # Set environment variables
@@ -30,7 +28,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Stage 2: Development image
-FROM base as development
+FROM base AS development
 
 # Install development dependencies
 RUN pip install jupyter ipykernel
@@ -45,7 +43,7 @@ RUN mkdir -p logs artifacts/models artifacts/evaluation data
 CMD ["python", "main.py", "--config", "config/default_config.yaml"]
 
 # Stage 3: Production image
-FROM base as production
+FROM base AS production
 
 # Create non-root user for security
 RUN useradd --create-home --shell /bin/bash mlops
@@ -70,10 +68,7 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 CMD ["python", "main.py", "--config", "config/default_config.yaml"]
 
 # Stage 4: Training image
-FROM production as training
-
-# Copy training-specific configurations
-COPY config/training_config.yaml config/
+FROM production AS training
 
 # Set environment variables for training
 ENV MLOPS_MODE=train
@@ -84,10 +79,7 @@ ENV MLOPS_TRAINING_DEVICE=auto
 CMD ["python", "main.py", "--config", "config/training_config.yaml", "--mode", "train"]
 
 # Stage 5: Evaluation image
-FROM production as evaluation
-
-# Copy evaluation-specific configurations
-COPY config/evaluation_config.yaml config/
+FROM production AS evaluation
 
 # Set environment variables for evaluation
 ENV MLOPS_MODE=evaluate
