Optimize Docker build for faster CI/CD execution

--- a/toyota_interview/Dockerfile
+++ b/toyota_interview/Dockerfile
@@ -25,7 +25,9 @@ WORKDIR /app
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir torch==2.0.1+cpu torchvision==0.15.2+cpu --index-url https://download.pytorch.org/whl/cpu && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Stage 2: Development image
 FROM base AS development
