--- a/toyota_interview/requirements.txt
+++ b/toyota_interview/requirements.txt
@@ -1,6 +1,5 @@
 # Core ML/DL libraries
-torch>=2.0.0
-torchvision>=0.15.0
+# torch and torchvision installed separately in Dockerfile with CPU-only wheels
 numpy>=1.21.0
 scikit-learn>=1.0.0
 
