--- a/.github/workflows/model-validation.yml
+++ b/.github/workflows/model-validation.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         cd toyota_interview
         python -m pip install --upgrade pip
+        pip install torch==2.0.1+cpu torchvision==0.15.2+cpu --index-url https://download.pytorch.org/whl/cpu
         pip install -r requirements.txt
 
     - name: Download model artifacts
