--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -288,6 +288,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: training-artifacts-cpu
+      continue-on-error: true
 
     - name: Run performance benchmark
       run: |
@@ -342,6 +343,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: training-artifacts-cpu
+      continue-on-error: true
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
