--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -352,22 +352,15 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push production image
+    - name: Build production image (no push due to permissions)
       uses: docker/build-push-action@v5
       with:
         context: toyota_interview
         target: production
-        push: true
+        push: false
         tags: |
-          ghcr.io/${{ steps.lowercase.outputs.repository }}/mnist-mlops:latest
-          ghcr.io/${{ steps.lowercase.outputs.repository }}/mnist-mlops:${{ github.sha }}
+          mnist-mlops:latest
+          mnist-mlops:${{ github.sha }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
